style/style.css
body{
    background-color: rgb(244, 242, 242) !important;
    /* height: 100vh; */
    /* margin-top: 0px; */
} 
.tagscontainer{
    margin-bottom: 30px;
}

.first-part{
    width: 100%;
    margin: 30px;
}
.searce-section{
    width: 50%;
}


.searce-section input{
    border: 1px solid rgb(168, 167, 167);
    /* border-right: none; */
}

.search-form {
    /* margin: 20px; */
}
    .icon{
        display: flex;
        justify-content: end;
        align-items: center;
    }

.input-text {
    padding: 10px;
    font-size: 17px;
    border-right: none;
    border-radius: 3px 0 0 3px;
    border: none;
    background-color: white;
    float: left;
    width: 50%;
}

.search-button {
    background-color: #0b7dda;
    color: aliceblue;
    width: 20%;
    padding: 10px;
    cursor: pointer;
    border-left: none;
    border: 1px solid  #0b7dda;
    border-radius: 3px;
    float: left;
}


.search-button:hover {
    background: rgb(31, 31, 252);
}

.select-item {
    width: 50%;
    padding: 3px;
    /* margin: 30px; */
    border-radius: 5px;
    /* border: solid; */
    display: flex;
    justify-content: end;
}

.select-item select{
    width: 150px;
}

.grid-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-row-gap: 20px;
    grid-column-gap: 30px;
    /* padding: 5px;
    margin: 0px 81px 0px; */
    margin-left: 5vw;
    margin-right: 15vw;
}

.grid-tags {
    background-color: white;
    border-radius: 3px;
    padding: 3px;
    cursor: pointer;
    box-shadow: 1px 1px 2px 1px rgba(12, 12, 23, 0.2);
}

.grid-tags:hover {
    cursor: pointer;
    box-shadow: 1px 1px 1px 5px rgba(202, 202, 203, 0.2);
}


@media only screen and (max-width: 600px) {
    .searce-section{
        width: 100%;
        /* border: solid; */
        display: flex;
        justify-content: center;
    }
    .grid-container {
        display: grid;
        margin: 0px 30px 0px;
        grid-template-columns: repeat(1, 1fr);
        padding: 5px;
    }

    .first-part {

        display: inline-flex;
        flex-direction: column;
    }

    .input-text {
        padding: 5px;
        font-size: 17px;
        border-right: none;
        border-radius: 3px 0 0 3px;
        border: none;
        background-color: white;
        float: left;
        width: 70%;
    }

    .search-button {
        background-color: #0b7dda;
        color: aliceblue;
        width: 30%;
        padding: 5px;
        cursor: pointer;
        border-left: none;
        /* border: 1px solid rgb(218, 16, 16); */
        border-radius: 3px;
        float: left;
    }

    .select-item {
        width: 80%;
        padding: 3px;
        border-radius: 5px;
        margin-top: 10px;

    }
  
}

